Bugfix: number cells in data table were not right-aligned when the forceOneLine prop was true.

--- a/packages/ketchup/src/components/kup-data-table/styles/kup-data-table-main.scss
+++ b/packages/ketchup/src/components/kup-data-table/styles/kup-data-table-main.scss
@@ -408,6 +408,10 @@ tbody {
           &.is-centered {
             display: flex;
           }
+
+          &.number-cell {
+            text-align: right;
+          }
         }
 
         &.is-tooltip {
